--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,6 +5,7 @@ jobs:
   Explore-Github-Actions:
     runs-on: ubuntu-latest
     steps:
+      - uses: php-actions/composer@latest
+      - uses: php-actions/phpunit@latest
       - run: echo "Show path"
-      - run: cd ..
       - run: ls -l
