--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,7 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: sqlite3, mbstring, zip, xml, gd, dom
       - uses: php-actions/composer@v6
       - uses: php-actions/phpunit@v3
-      - run: echo "Show path"
-      - run: ls -l
