--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: shivammathur/setup-php@v2
         with:
-          extensions: sqlite3, mbstring, zip, xml, gd, dom
+          extensions: sqlite, sqlite3, mbstring, zip, xml, gd, dom
       - run: sudo apt install php-gd
       - uses: php-actions/composer@v6
       - uses: php-actions/phpunit@v3
