--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           extensions: sqlite, sqlite3, mbstring, zip, xml, gd, dom
+      - run: sudo apt install php8.2-gd
       - uses: php-actions/composer@v6
       - run: php -v
       - uses: php-actions/phpunit@v3
