--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,11 +10,11 @@ jobs:
         with:
           extensions: sqlite, sqlite3, mbstring, zip, xml, gd, dom
       - uses: php-actions/composer@v6
-      - run: ./vendor/bin/phpunit --coverage-cobertura=log/coverage.cobertura.xml
+      - run: ./vendor/bin/phpunit --coverage-cobertura=coverage.cobertura.xml
       - name: Code Coverage Summary Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: log/coverage.cobertura.xml
+          filename: coverage.cobertura.xml
           badge: true
           fail_below_min: true
           format: markdown
