--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,5 +25,10 @@ jobs:
           indicators: true
           output: file
           thresholds: '60 80'
+      - name: PHP Code Sniffer
+        uses: php-actions/phpcs@v1
+        with:
+          path: src/
+          standard: phpcs.xml
       - name: Adding markdown
         run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
