--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,7 +28,7 @@ jobs:
       - name: PHP Code Sniffer
         uses: php-actions/phpcs@v1
         with:
-          path: src/
+          path: lib/
           standard: phpcs.xml
       - name: Adding markdown
         run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
