--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,6 +25,10 @@ jobs:
           indicators: true
           output: file
           thresholds: '60 80'
+      - name: PHP CS Fixer
+        uses: StephaneBour/actions-php-cs-fixer@1.0
+        with:
+          dir: './lib'
       - name: PHP Code Sniffer
         uses: php-actions/phpcs@v1
         with:
