--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -41,8 +41,13 @@ jobs:
           key: ${{secrets.DEPLOYMENT}}
           source: "*"
           target: /home/ubuntu/srv
-      - name: after SCP
-        run: rm -rf /srv/* && cp -R /home/ubuntu/srv/* /srv && chmod -R 777 /srv/*
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: "13.48.50.234"
+          username: ubuntu
+          key: ${{secrets.DEPLOYMENT}}
+          script: rm -rf /srv/* && cp -R /home/ubuntu/srv/* /srv && chmod -R 777 /srv/*
       - name: PHP Code Sniffer
         uses: php-actions/phpcs@v1
         with:
